# fixext

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  GNUmakefile  README.md  build.rs  desc.types.cbor  fixext.1  fixext.rs  rust-toolchain.toml  rustfmt.toml  windist.sh
data/: 01.favorite.desc.types  01.favorite.mime.types  09.apache.mime.types
src/: lib.rs  main.rs  mime.types.cbor
